# techo

./: .gitignore  .pre-commit-config.yaml  README.md  calendar.ts  cli.py  colors.ts  eslint.config.mjs  export.ts  index.html  main.ts  moon.ts  moonlib.py  night-owl.tex  nightowl.py  package.json  pre.ref  pyproject.toml  senary.py  senary.tex  sizes.py  sizes.tex  test_centers.py  test_draw.py  xgen.py  xianzhang.py  xianzhang.tex
a5s/: a5s.tex
a5s-xianzhang/: a5s-xianzhang.tex
cozyca/: cozyca.tex
m5/: generate.py  m5.tex
m5-xianzhang/: m5-xianzhang.tex
night-owl-cozyca/: night-owl-cozyca.tex
night-owl-m5/: night-owl-m5.tex
senary/: generate.py  senary.tex
senary-2026-07/: senary-2026-07.tex
src/: cli.py  dot-grid.tex  sizes.py  tn_cover.py
src/ebook/: extract.py  render.py  split.py
src/green_dot/: __init__.py  green-dot.tex  green_dot.py
src/linear/: __init__.py  linear.py  linear.tex
src/midori_grid/: midori_grid.py
src/movie/: movie.py  movie.tex
src/movie_report/: movie_report.py  movie_report.tex
src/nightowl/: __init__.py  night-owl.tex  nightowl.py
src/senary/: __init__.py  day.py  day.tex  senary.py  senary.tex
src/seyes/: __init__.py  seyes.py  seyes.tex
src/techo/: colors.tex  validation.py
src/techo/ebook/: __init__.py  cli.py  split.py
src/techo/green_dot/: __init__.py  green_dot.py
src/techo/midori_grid/: midori_grid.tex
src/techo/movie_report/: movie_report.tex
src/techo/nightowl/: night-owl.tex  nightowl.py
src/techo/senary/: __init__.py  senary.tex
src/tn_cover/: __init__.py  tn_cover.py  tn_cover.tex
src/xianzhang/: __init__.py  xianzhang.py  xianzhang.tex
tests/: test_generators.py  test_movie.py  test_movie_report.py  test_validation.py
xianzhang/: generate.py  xianzhang.tex
xianzhang-a5s/: xianzhang-a5s.tex
xianzhang-cozyca/: xianzhang-cozyca.tex
xianzhang-m5/: xianzhang-m5.tex
