[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xianzhang"
version = "0.1.0"
description = "Plain ruled notebook generator — LaTeX templates"
requires-python = ">=3.13"
dependencies = ["click>=8.4.2"]

[project.scripts]
techo = "cli:cli"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "radon>=6.0.1",
    "ruff>=0.15.20",
    "ty>=0.0.55",
    "vulture>=2.16",
]
