[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "techo"
version = "0.1.0"
description = "Printable notebook and book generator"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12",
    "click>=8.4.2",
    "ebooklib>=0.18",
    "eink-image-processor",
    "ephem>=4.2.1",
    "markdownify>=0.14",
    "pillow>=12.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
techo = "src.cli:cli"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.uv.sources]
eink-image-processor = { git = "ssh://git@github.com/asinkLuno/gEInk.git" }

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "radon>=6.0.1",
    "ruff>=0.15.20",
    "ty>=0.0.55",
    "vulture>=2.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
